refactor getAllMyCards to use principal and add status filter
